// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UsersList > does not render read and write badges when user is not owner 1`] = `
<div>
  <section
    class="tw:mb-4"
  >
    <h3
      class="tw:text-xs tw:uppercase tw:tracking-wide tw:text-[var(--color-text-secondary)] tw:mb-2"
    >
      Shared
    </h3>
    <ul
      class="tw:flex tw:flex-col"
    >
      <li
        class="tw:flex tw:items-center tw:justify-between tw:gap-3 tw:py-2 tw:border-b tw:border-[var(--color-border)]"
        data-test-id="accepted-user-id2"
      >
        <span
          class="tw:text-sm"
        >
          bar@example.com
        </span>
      </li>
      <li
        class="tw:flex tw:items-center tw:justify-between tw:gap-3 tw:py-2 tw:border-b tw:border-[var(--color-border)]"
        data-test-id="accepted-user-id3"
      >
        <span
          class="tw:text-sm"
        >
          baz@example.com
        </span>
      </li>
    </ul>
  </section>
</div>
`;

exports[`UsersList > renders read and write badges when user is owner 1`] = `
<div>
  <section
    class="tw:mb-4"
  >
    <h3
      class="tw:text-xs tw:uppercase tw:tracking-wide tw:text-[var(--color-text-secondary)] tw:mb-2"
    >
      Shared
    </h3>
    <ul
      class="tw:flex tw:flex-col"
    >
      <li
        class="tw:flex tw:items-center tw:justify-between tw:gap-3 tw:py-2 tw:border-b tw:border-[var(--color-border)]"
        data-test-id="accepted-user-id2"
      >
        <span
          class="tw:text-sm tw:flex-1 tw:truncate"
        >
          bar@example.com
        </span>
        <button
          aria-label="Toggle permissions"
          class="tw:flex tw:items-center tw:gap-1 tw:cursor-pointer"
          data-test-id="toggle-permissions"
          type="button"
        >
          <span
            class="tw:inline-flex tw:items-center tw:text-xs tw:font-medium tw:px-2 tw:py-0.5 tw:rounded-full tw:bg-[rgb(16_185_129_/_0.15)] tw:text-[var(--color-success)]"
            data-test-id="perm-write"
          >
            write
          </span>
          <svg
            aria-hidden="true"
            class="tw:text-[var(--color-text-secondary)]"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; vertical-align: middle;"
            viewBox="0 0 512 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M270.6 454.6c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L248 386.7 385.4 249.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3l-160 160zm160-352l-160 160c-12.5 12.5-32.8 12.5-45.3 0l-160-160c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L248 194.7 385.4 57.4c12.5-12.5 32.8-12.5 45.3 0s12.5 32.8 0 45.3z"
            />
          </svg>
        </button>
        <button
          aria-label="Remove share"
          class="tw:rounded-full tw:transition-colors tw:duration-200 tw:ease-in-out tw:flex tw:items-center tw:justify-center tw:flex-shrink-0 tw:min-h-[44px] tw:min-w-[44px] tw:cursor-pointer tw:text-[var(--color-danger)] tw:hover:bg-[rgb(239_68_68_/_0.1)] tw:active:bg-[rgb(239_68_68_/_0.2)] tw:h-8 tw:w-8 tw:text-sm"
          data-test-id="remove-share"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; vertical-align: middle;"
            viewBox="0 0 512 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3
      32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2
      6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0
      46.3-19.7 47.9-45L416 128z"
            />
          </svg>
        </button>
      </li>
      <li
        class="tw:flex tw:items-center tw:justify-between tw:gap-3 tw:py-2 tw:border-b tw:border-[var(--color-border)]"
        data-test-id="accepted-user-id3"
      >
        <span
          class="tw:text-sm tw:flex-1 tw:truncate"
        >
          baz@example.com
        </span>
        <button
          aria-label="Toggle permissions"
          class="tw:flex tw:items-center tw:gap-1 tw:cursor-pointer"
          data-test-id="toggle-permissions"
          type="button"
        >
          <span
            class="tw:inline-flex tw:items-center tw:text-xs tw:font-medium tw:px-2 tw:py-0.5 tw:rounded-full tw:bg-[var(--color-primary-light)] tw:text-[var(--color-primary)]"
            data-test-id="perm-read"
          >
            read
          </span>
          <svg
            aria-hidden="true"
            class="tw:text-[var(--color-text-secondary)]"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; vertical-align: middle;"
            viewBox="0 0 512 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M270.6 73.4c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L248 141.3 385.4 278.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3l-160-160zm160 352l-160-160c-12.5-12.5-32.8-12.5-45.3 0l-160 160c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L248 333.3 385.4 470.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3z"
            />
          </svg>
        </button>
        <button
          aria-label="Remove share"
          class="tw:rounded-full tw:transition-colors tw:duration-200 tw:ease-in-out tw:flex tw:items-center tw:justify-center tw:flex-shrink-0 tw:min-h-[44px] tw:min-w-[44px] tw:cursor-pointer tw:text-[var(--color-danger)] tw:hover:bg-[rgb(239_68_68_/_0.1)] tw:active:bg-[rgb(239_68_68_/_0.2)] tw:h-8 tw:w-8 tw:text-sm"
          data-test-id="remove-share"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="currentColor"
            focusable="false"
            height="14"
            role="img"
            style="display: inline-block; vertical-align: middle;"
            viewBox="0 0 512 512"
            width="14"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M135.2 17.7L128 32H32C14.3 32 0 46.3 0 64S14.3 96 32 96H416c17.7 0 32-14.3
      32-32s-14.3-32-32-32H320l-7.2-14.3C307.4 6.8 296.3 0 284.2 0H163.8c-12.1 0-23.2
      6.8-28.6 17.7zM416 128H32L53.2 467c1.6 25.3 22.6 45 47.9 45H346.9c25.3 0
      46.3-19.7 47.9-45L416 128z"
            />
          </svg>
        </button>
      </li>
    </ul>
  </section>
</div>
`;
